--- a/ca_v1/src/main/resources/application.properties
+++ b/ca_v1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/ca_v1?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.jpa.generate-ddl=true
