--- a/ca_v1/pom.xml
+++ b/ca_v1/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 
 	<dependencies>
+	<!-- Java Mail Dependency -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
